Remove publishing steps from workflows

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -102,19 +102,19 @@ jobs:
           name: ksnip-macos.dmg
           path: ksnip-*.dmg
 
-      - name: Delete existing release with same name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bash ./.github/scripts/delete_release.sh
+    #   - name: Delete existing release with same name
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     run: bash ./.github/scripts/delete_release.sh
 
-      - name: Upload Release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ksnip-${{ env.VERSION }}.dmg
-          asset_name: ksnip-${{ env.VERSION }}.dmg
-          tag: ${{ env.RELEASE_TAG }}
-          overwrite: true
-          release_name: ${{ env.RELEASE_NAME }}
-          body: ${{ env.UPLOADTOOL_BODY }}
-          prerelease: ${{ env.IS_PRERELASE }}
+    #   - name: Upload Release
+    #     uses: svenstaro/upload-release-action@v2
+    #     with:
+    #       repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #       file: ksnip-${{ env.VERSION }}.dmg
+    #       asset_name: ksnip-${{ env.VERSION }}.dmg
+    #       tag: ${{ env.RELEASE_TAG }}
+    #       overwrite: true
+    #       release_name: ${{ env.RELEASE_NAME }}
+    #       body: ${{ env.UPLOADTOOL_BODY }}
+    #       prerelease: ${{ env.IS_PRERELASE }}
