--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -97,22 +97,22 @@ jobs:
           name: ksnip.AppImage
           path: ksnip*.AppImage*
 
-      - name: Delete existing release with same name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bash ./.github/scripts/delete_release.sh
+    #   - name: Delete existing release with same name
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     run: bash ./.github/scripts/delete_release.sh
 
-      - name: Upload Release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ksnip-${{ env.VERSION }}-x86_64.AppImage
-          asset_name: ksnip-${{ env.VERSION }}-x86_64.AppImage
-          tag: ${{ env.RELEASE_TAG }}
-          overwrite: true
-          release_name: ${{ env.RELEASE_NAME }}
-          body: ${{ env.UPLOADTOOL_BODY }}
-          prerelease: ${{ env.IS_PRERELASE }}
+    #   - name: Upload Release
+    #     uses: svenstaro/upload-release-action@v2
+    #     with:
+    #       repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #       file: ksnip-${{ env.VERSION }}-x86_64.AppImage
+    #       asset_name: ksnip-${{ env.VERSION }}-x86_64.AppImage
+    #       tag: ${{ env.RELEASE_TAG }}
+    #       overwrite: true
+    #       release_name: ${{ env.RELEASE_NAME }}
+    #       body: ${{ env.UPLOADTOOL_BODY }}
+    #       prerelease: ${{ env.IS_PRERELASE }}
 
 
   package-rpm:
@@ -159,22 +159,22 @@ jobs:
           name: ksnip.rpm
           path: ksnip-*.rpm
 
-      - name: Delete existing release with same name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bash ./.github/scripts/delete_release.sh
+    #   - name: Delete existing release with same name
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     run: bash ./.github/scripts/delete_release.sh
 
-      - name: Upload Release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ksnip-${{ env.VERSION }}.rpm
-          asset_name: ksnip-${{ env.VERSION }}.rpm
-          tag: ${{ env.RELEASE_TAG }}
-          overwrite: true
-          release_name: ${{ env.RELEASE_NAME }}
-          body: ${{ env.UPLOADTOOL_BODY }}
-          prerelease: ${{ env.IS_PRERELASE }}
+    #   - name: Upload Release
+    #     uses: svenstaro/upload-release-action@v2
+    #     with:
+    #       repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #       file: ksnip-${{ env.VERSION }}.rpm
+    #       asset_name: ksnip-${{ env.VERSION }}.rpm
+    #       tag: ${{ env.RELEASE_TAG }}
+    #       overwrite: true
+    #       release_name: ${{ env.RELEASE_NAME }}
+    #       body: ${{ env.UPLOADTOOL_BODY }}
+    #       prerelease: ${{ env.IS_PRERELASE }}
 
 
   package-deb:
@@ -221,20 +221,20 @@ jobs:
           name: ksnip.deb
           path: ksnip-*.deb
 
-      - name: Delete existing release with same name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: bash ./.github/scripts/delete_release.sh
+    #   - name: Delete existing release with same name
+    #     env:
+    #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     run: bash ./.github/scripts/delete_release.sh
 
-      - name: Upload Release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ksnip-${{ env.VERSION }}.deb
-          asset_name: ksnip-${{ env.VERSION }}.deb
-          tag: ${{ env.RELEASE_TAG }}
-          overwrite: true
-          release_name: ${{ env.RELEASE_NAME }}
-          body: ${{ env.UPLOADTOOL_BODY }}
-          prerelease: ${{ env.IS_PRERELASE }}
+    #   - name: Upload Release
+    #     uses: svenstaro/upload-release-action@v2
+    #     with:
+    #       repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #       file: ksnip-${{ env.VERSION }}.deb
+    #       asset_name: ksnip-${{ env.VERSION }}.deb
+    #       tag: ${{ env.RELEASE_TAG }}
+    #       overwrite: true
+    #       release_name: ${{ env.RELEASE_NAME }}
+    #       body: ${{ env.UPLOADTOOL_BODY }}
+    #       prerelease: ${{ env.IS_PRERELASE }}
 
