--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -50,57 +50,57 @@ jobs:
       run: ctest --extra-verbose
 
 
-  package-dmg:
-    runs-on: macos-latest
-    needs: test-macos
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#   package-dmg:
+#     runs-on: macos-latest
+#     needs: test-macos
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Set up build variables
-        run: bash ./.github/scripts/setup_build_variables.sh
+#       - name: Set up build variables
+#         run: bash ./.github/scripts/setup_build_variables.sh
 
-      - name: Set up windows build variables
-        run: bash ./.github/scripts/macos/setup_macos_build_variables.sh
+#       - name: Set up windows build variables
+#         run: bash ./.github/scripts/macos/setup_macos_build_variables.sh
 
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v3
-        with:
-          version: '5.15.2'
-          host: 'mac'
-          install-deps: 'true'
+#       - name: Install Qt
+#         uses: jurplel/install-qt-action@v3
+#         with:
+#           version: '5.15.2'
+#           host: 'mac'
+#           install-deps: 'true'
 
-      - name: Set up kColorPicker
-        run: bash ./.github/scripts/setup_kColorPicker.sh
+#       - name: Set up kColorPicker
+#         run: bash ./.github/scripts/setup_kColorPicker.sh
 
-      - name: Set up kImageAnnotator
-        run: bash ./.github/scripts/setup_kImageAnnotator.sh
+#       - name: Set up kImageAnnotator
+#         run: bash ./.github/scripts/setup_kImageAnnotator.sh
 
-      - name: Build
-        run: bash ./.github/scripts/build_ksnip.sh
+#       - name: Build
+#         run: bash ./.github/scripts/build_ksnip.sh
 
-      - name: Add OSX certificate to key chain
-        env:
-          APPLE_CERT_P12: ${{ secrets.APPLE_CERT_P12 }}
-          APPLE_CERT_P12_PASS: ${{ secrets.APPLE_CERT_P12_PASS }}
-        run: bash ./.github/scripts/macos/add_osx_cert.sh
+#       - name: Add OSX certificate to key chain
+#         env:
+#           APPLE_CERT_P12: ${{ secrets.APPLE_CERT_P12 }}
+#           APPLE_CERT_P12_PASS: ${{ secrets.APPLE_CERT_P12_PASS }}
+#         run: bash ./.github/scripts/macos/add_osx_cert.sh
 
-      - name: Package dmg
-        env:
-          APPLE_DEV_IDENTITY: ${{ secrets.APPLE_DEV_IDENTITY }}
-        run: bash ./.github/scripts/macos/package_dmg.sh
+#       - name: Package dmg
+#         env:
+#           APPLE_DEV_IDENTITY: ${{ secrets.APPLE_DEV_IDENTITY }}
+#         run: bash ./.github/scripts/macos/package_dmg.sh
 
-      - name: Notarize dmg package
-        env:
-          APPLE_DEV_PASS: ${{ secrets.APPLE_DEV_PASS }}
-          APPLE_DEV_USER: ${{ secrets.APPLE_DEV_USER }}
-        run: bash ./.github/scripts/macos/notarize_osx_dmg_package.sh
+#       - name: Notarize dmg package
+#         env:
+#           APPLE_DEV_PASS: ${{ secrets.APPLE_DEV_PASS }}
+#           APPLE_DEV_USER: ${{ secrets.APPLE_DEV_USER }}
+#         run: bash ./.github/scripts/macos/notarize_osx_dmg_package.sh
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ksnip-macos.dmg
-          path: ksnip-*.dmg
+#       - name: Upload Artifact
+#         uses: actions/upload-artifact@v3
+#         with:
+#           name: ksnip-macos.dmg
+#           path: ksnip-*.dmg
 
     #   - name: Delete existing release with same name
     #     env:
